# PocketFlow-tutorial-zh

./: .env  pyproject.toml  run_agent.py  run_batch.py  run_chat.py  run_guardrail.py  run_mapreduce.py  run_rag.py  run_streaming.py  run_structured_output.py  run_workflow.py
agent/: flow.py  nodes.py  utils.py
batch/: node.py
chat/: main.py  node.py  utils.py
guardrail/: nodes.py
mapreduce/: flow.py  nodes.py  utils.py
rag/: flow.py  nodes.py  utils.py
streaming/: node.py  utils.py
structured_output/: node.py  utils.py
workflow/: flow.py  nodes.py
